--- a/.config
+++ b/.config
@@ -7,8 +7,8 @@ CONFIG_TESTING_KERNEL=y
 
 CONFIG_GRUB_IMAGES=y
 CONFIG_VMDK_IMAGES=y
-CONFIG_VDI_IMAGES=y
-CONFIG_VHDX_IMAGES=y
+# CONFIG_VDI_IMAGES=y
+# CONFIG_VHDX_IMAGES=y
 CONFIG_GRUB_TITLE="x86_64 firmware by AutoBuild-Actions"
 CONFIG_GRUB_TIMEOUT="3"
 CONFIG_TARGET_KERNEL_PARTSIZE=32
@@ -120,16 +120,7 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-shutdown=y
 CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-app-iperf3-server=y
-# passwall
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall_Simple_Obfs=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+
 # ssr-plus
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
@@ -142,6 +133,7 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 # Themes
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-neobird=y
+CONFIG_PACKAGE_luci-theme-edge=y
 
 # 其他 Appliciations
 CONFIG_PACKAGE_autosamba=y
@@ -176,7 +168,6 @@ CONFIG_PACKAGE_git-http=y
 CONFIG_PACKAGE_httping=y
 CONFIG_PACKAGE_hdparm=y
 CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_jq=y
 CONFIG_PACKAGE_lsof=y
