--- a/.config
+++ b/.config
@@ -119,21 +119,17 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 # 多拨虚拟网卡
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-shutdown=y
+# 添加smartdns
 CONFIG_PACKAGE_luci-app-smartdns=y
-
-# ssr-plus
-CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 
 # Themes
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-neobird=y
 CONFIG_PACKAGE_luci-theme-edge=y
+
+# 取消默认
+# CONFIG_PACKAGE_luci-app-xlnetacc is not set
+# CONFIG_PACKAGE_luci-app-wireguard is not set
 
 # 其他 Appliciations
 CONFIG_PACKAGE_autosamba=y
