--- a/.config
+++ b/.config
@@ -1,23 +1,29 @@
+# x86
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-CONFIG_LINUX_5_19=y
-CONFIG_TESTING_KERNEL=y
+# 内核设置
+# CONFIG_LINUX_5_19=y
+# CONFIG_TESTING_KERNEL=y
 
-CONFIG_GRUB_IMAGES=y
-CONFIG_VMDK_IMAGES=y
-# CONFIG_VDI_IMAGES=y
-# CONFIG_VHDX_IMAGES=y
-CONFIG_GRUB_TITLE="x86_64 firmware by AutoBuild-Actions"
-CONFIG_GRUB_TIMEOUT="3"
+# 固件大小
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=480
-# CONFIG_GRUB_CONSOLE is not set
-CONFIG_TARGET_IMAGES_GZIP=y
 
-# CONFIG_SIGNATURE_CHECK is not set
-# CONFIG_SIGNED_PACKAGES is not set
+# 固件类型
+# CONFIG_GRUB_CONSOLE is not set
+CONFIG_GRUB_IMAGES=y
+CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_TARGET_IMAGES_GZIP=y
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_ROOTFS_TARGZ=y
+# CONFIG_VMDK_IMAGES=y
+
+# Docker 支持
+CONFIG_PACKAGE_luci-app-docker=y
+CONFIG_PACKAGE_luci-i18n-docker-zh-cn=y
 
 # IPv6 支持
 CONFIG_IPV6=y
@@ -28,7 +34,7 @@ CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_6rd=y
 CONFIG_PACKAGE_6to4=y
 
-# 固件
+# wifi固件
 CONFIG_PACKAGE_rtl8821ae-firmware=y
 CONFIG_PACKAGE_rtl8821cu-firmware=y
 CONFIG_PACKAGE_rtl8821ce-firmware=y
