--- a/.config
+++ b/.config
@@ -22,8 +22,14 @@ CONFIG_TARGET_ROOTFS_TARGZ=y
 # CONFIG_VMDK_IMAGES=y
 
 # Docker 支持
-CONFIG_PACKAGE_luci-app-docker=y
-CONFIG_PACKAGE_luci-i18n-docker-zh-cn=y
+CONFIG_DOCKER_CGROUP_OPTIONS=y
+CONFIG_DOCKER_NET_MACVLAN=y
+CONFIG_DOCKER_STO_EXT4=y
+CONFIG_PACKAGE_docker=y
+CONFIG_PACKAGE_dockerd=y
+CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+CONFIG_PACKAGE_luci-lib-docker=y
 
 # IPv6 支持
 CONFIG_IPV6=y
