--- a/x86-64.config
+++ b/x86-64.config
@@ -133,7 +133,7 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-shutdown=y
 # 添加smartdns
-CONFIG_PACKAGE_luci-app-smartdns=y
+# CONFIG_PACKAGE_luci-app-smartdns is not set
 
 # Themes
 CONFIG_PACKAGE_luci-theme-argon=y
