--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -11,16 +11,16 @@ on:
         default: 'x86_64-mini'
         type: choice
         options:
-          - x86-64
-          - x86-64_mini
+          - x86_64
+          - x86_64-mini
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: ${{inputs.CONFIG=='x86-64' && 'x86-64.config' || 'x86-64_mini.config'}}
+  CONFIG_FILE: ${{inputs.CONFIG=='x86_64' && 'x86_64.config' || 'x86_64-mini.config'}}
   CLASH_KERNEL: amd64
-  DIY_SH: ${{inputs.CONFIG=='x86-64' && 'diy-script.sh' || 'diy-mini.sh'}}
+  DIY_SH: ${{inputs.CONFIG=='x86_64' && 'diy-script.sh' || 'diy-mini.sh'}}
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -103,10 +103,10 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
-        echo "::set-output name=status::success"
+        echo "status=success" >> "$GITHUB_OUTPUT"
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
-        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
-        echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=-$(cat DEVICE_NAME)" >> $GITHUB_ENV
+        echo "FILE_DATE=-$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
     - name: Check space usage
       if: (!cancelled())
@@ -132,7 +132,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt-firmware-${{inputs.CONFIG}}${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
     - name: Upload firmware to cowtransfer
