--- a/x86_64-mini.config
+++ b/x86_64-mini.config
@@ -28,7 +28,6 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-cifs-mount is not set
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-frpc=y
@@ -101,7 +100,6 @@ CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_snmpd=y
 CONFIG_PACKAGE_vim-fuller=y
 CONFIG_PACKAGE_zsh=y
-CONFIG_PACKAGE_docker-compose=y
 
 # Shortcut-Fe
 CONFIG_PACKAGE_kmod-shortcut-fe=y
@@ -113,3 +111,7 @@ CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-extra=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
+
+# Docker Support
+CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_docker-compose=y
