--- a/x86_64-mini.config
+++ b/x86_64-mini.config
@@ -15,7 +15,7 @@ CONFIG_TARGET_IMAGES_GZIP=y
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_TARGZ=y
-# CONFIG_VMDK_IMAGES is not set
+CONFIG_VMDK_IMAGES=y
 
 # Applications
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
@@ -113,5 +113,5 @@ CONFIG_PACKAGE_ip6tables-extra=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
 
 # Docker Support
-CONFIG_PACKAGE_luci-app-dockerman=y
-CONFIG_PACKAGE_docker-compose=y
+# CONFIG_PACKAGE_luci-app-dockerman is not set
+# CONFIG_PACKAGE_docker-compose is not set
