--- a/config/openwrt/x86_64.config
+++ b/config/openwrt/x86_64.config
@@ -65,6 +65,7 @@ CONFIG_PACKAGE_kmod-shortcut-fe=y
 CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
 
 # Ipv6 Support
+CONFIG_PACKAGE_dnsmasq=n
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_ipv6helper=y
 
