--- a/config/openwrt/x86_64.config
+++ b/config/openwrt/x86_64.config
@@ -17,6 +17,9 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_TARGZ=y
 CONFIG_VMDK_IMAGES=y
 
+# 中文
+CONFIG_LUCI_LANG_zh_Hans=y
+
 # Applications
 CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_luci-app-arpbind=y
@@ -39,8 +42,6 @@ CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=y
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-turboacc=y
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 
@@ -59,13 +60,10 @@ CONFIG_PACKAGE_nano-plus=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_snmpd=y
 CONFIG_PACKAGE_vim-fuller=y
-
-# Shortcut-Fe
-CONFIG_PACKAGE_kmod-shortcut-fe=y
-CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
+CONFIG_PACKAGE_bash=y
 
 # Ipv6 Support
-CONFIG_PACKAGE_dnsmasq=n
+# CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_ipv6helper=y
 
