--- a/config/lede/x86_64.config
+++ b/config/lede/x86_64.config
@@ -18,7 +18,7 @@ CONFIG_TARGET_ROOTFS_TARGZ=y
 CONFIG_VMDK_IMAGES=y
 
 # Applications
-# CONFIG_PACKAGE_luci-app-adguardhome is not set
+CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-arpbind=y
@@ -81,6 +81,7 @@ CONFIG_PACKAGE_docker-compose=y
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 # CONFIG_PACKAGE_luci-app-turboacc is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
+# CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # ssr
 # CONFIG_PACKAGE_luci-app-ssr-plusis is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteriais is not set
