--- a/config/openwrt/x86_64.config
+++ b/config/openwrt/x86_64.config
@@ -64,6 +64,7 @@ CONFIG_PACKAGE_vim-fuller=y
 CONFIG_PACKAGE_bash=y
 
 # Ipv6 Support
+# CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_ipv6helper=y
 
