--- a/config/openwrt/x86_64.config
+++ b/config/openwrt/x86_64.config
@@ -49,6 +49,8 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 # Themes
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-openwrt-2020=y
 
 # Software
 CONFIG_PACKAGE_autosamba=y
