--- a/config/openwrt/x86_64.config
+++ b/config/openwrt/x86_64.config
@@ -17,7 +17,8 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_TARGZ=y
 CONFIG_VMDK_IMAGES=y
 
-# 中文
+# Luci
+CONFIG_PACKAGE_luci-app-uhttpd=y
 CONFIG_LUCI_LANG_zh_Hans=y
 
 # Applications
