--- a/config/openwrt/x86_64.config
+++ b/config/openwrt/x86_64.config
@@ -18,11 +18,11 @@ CONFIG_TARGET_ROOTFS_TARGZ=y
 CONFIG_VMDK_IMAGES=y
 
 # Luci
-CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_LUCI_LANG_zh_Hans=y
 
 # Applications
-# CONFIG_PACKAGE_luci-app-alist is not set
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
@@ -37,10 +37,8 @@ CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-onliner=y
+CONFIG_PACKAGE_luci-app-statistics=y
 CONFIG_PACKAGE_luci-app-openclash=y
-# CONFIG_PACKAGE_luci-app-rclone is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
@@ -50,8 +48,6 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 # Themes
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
-CONFIG_PACKAGE_luci-theme-material=y
-CONFIG_PACKAGE_luci-theme-openwrt-2020=y
 
 # Software
 CONFIG_PACKAGE_autosamba=y
