--- a/config/immortalwrt/x86_64.config
+++ b/config/immortalwrt/x86_64.config
@@ -58,7 +58,7 @@ CONFIG_PACKAGE_ipv6helper=y
 # CONFIG_PACKAGE_docker-compose is not set
 
 # Applications
-CONFIG_PACKAGE_luci-app-netdata is not set
+# CONFIG_PACKAGE_luci-app-netdata is not set
 # CONFIG_PACKAGE_luci-app-cifs-mount is not set
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
