--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -140,7 +140,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: ImmortalWrt-firmware-${{inputs.VERSION}}${{ env.CLASH_KERNEL }}${{ env.FILE_DATE }}
+        name: ImmortalWrt-firmware-${{inputs.VERSION}}-${{ env.CLASH_KERNEL }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
     - name: Generate release tag
